<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

    <GridLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:alignmentMode="alignBounds"
        android:columnCount="2"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:useDefaultMargins="false" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:text="@string/onoff_label" />

        <Switch
            android:id="@+id/switchOnOff"
            android:layout_gravity="right"
            android:padding="4dp"
            android:textOff="@string/off_label"
            android:textOn="@string/on_label" />

        <TextView
            android:padding="4dp"
            android:text="@string/version_label" />

        <TextView
            android:id="@+id/textVersion"
            android:layout_gravity="right"
            android:padding="4dp"
            android:text="" />
    </GridLayout>

</ScrollView>