<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

    <GridLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:alignmentMode="alignBounds"
        android:columnCount="2"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:rowCount="4"
        android:useDefaultMargins="false" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_gravity="top"
            android:layout_row="0"
            android:orientation="vertical" >

            <com.github.hobbe.android.openkarotz.widget.RotaryKnob
                android:id="@+id/rotaryKnobEars"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:src="@drawable/jog" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_margin="4dip"
            android:layout_row="1"
            android:padding="4dip"
            android:text="@string/ears_reset_label" />

        <ImageButton
            android:id="@+id/buttonEarsReset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="right|center_vertical"
            android:layout_row="1"
            android:contentDescription="@string/ears_reset_desc"
            android:src="@drawable/ic_button_reset" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_margin="4dip"
            android:layout_row="2"
            android:padding="4dip"
            android:text="@string/ears_random_label" />

        <ImageButton
            android:id="@+id/buttonEarsRandom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="right|center_vertical"
            android:layout_row="2"
            android:contentDescription="@string/ears_random_desc"
            android:src="@drawable/ic_button_random" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_margin="4dip"
            android:layout_row="3"
            android:padding="4dip"
            android:text="@string/ears_disabled_label" />

        <Switch
            android:id="@+id/switchEarsDisabled"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="right|center_vertical"
            android:layout_margin="4dip"
            android:layout_row="3"
            android:padding="4dip"
            android:textOff="@string/off_label"
            android:textOn="@string/on_label" />
    </GridLayout>

</ScrollView>